# k_and_r

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ex01_15.c
chap01/: ex01_01.c  ex01_02.c  ex01_03.c  ex01_04.c  ex01_05.c  ex01_06.c  ex01_07.c  ex01_08.c  ex01_09.c  ex01_10.c  ex01_11.c  ex01_12.c  ex01_13.c  ex01_14.c  ex01_15.c  ex01_16.c  ex01_17.c  ex01_18.c
include/: grund.h
include/slk/: debug.h
